# programacao-funcional-em-haskell

./: README.md
collision/src/: Main.hs
exercicios/src/: Main.hs
listas/src/: Main.hs
nine-nine-problems/: README.md  nine-nine-problems.cabal
nine-nine-problems/src/: Main.hs
ninety-nine-problems/src/: Main.hs
primeiroProjeto/: primeiroProjeto.cabal
primeiroProjeto/src/: Main.hs  newMain.hs
sandbox/: sandbox.cabal
sandbox/src/: Main.hs
