name:                primeiroProjeto
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/primeiroProjeto#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          bryan.bialokur@gmail.com
copyright:           2018 Bryan Bialokur da Cruz
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable primeiroProjeto
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
